--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-picker": "^0.0.6",
     "react-native": "^0.67.4",
     "react-native-autolink": "^4.0.0",
     "react-native-hyperlink": "^0.0.19",
     "react-native-web": "^0.17.7",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "use-file-picker": "^1.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
