--- a/birdy-server/package.json
+++ b/birdy-server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "express": "^4.17.3",
