--- a/birdy-server/package.json
+++ b/birdy-server/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha tests/**",
+    "initDB": "mocha database/databaseScripts/initDB.js",
+    "cleanDB": "mocha database/databaseScripts/cleanDB.js",
     "serve": "node src/index.js"
   },
   "author": "",
